MAGNOLIA-2534 * Update dependencies to jackrabbit 1.5 * MemoryFileSystem does not need a path attribute (and doesn't support it anymore as from 1.5) * added RepositoryTestCase.workaroundJCR1778() to avoid this issue - it shouldn't have an impact on running Magnolia instances
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@20980 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/pom.xml
+++ b/magnolia-core/pom.xml
@@ -98,7 +98,7 @@
     <dependency>
       <!-- required by commons-httpclient, commons-betwixt, commons-discovery, commons-chain in replacement of commons-logging-->
       <groupId>org.slf4j</groupId>
-      <artifactId>jcl104-over-slf4j</artifactId>
+      <artifactId>jcl-over-slf4j</artifactId>
     </dependency>
     <dependency>
       <groupId>xerces</groupId>
