MAGNOLIA-2492 renamed mail package from cms to module
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21164 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -7,7 +7,7 @@ info.magnolia.context.SystemContext=info.magnolia.context.JCRSessionPerThreadSys
 info.magnolia.module.ModuleManager=info.magnolia.module.ModuleManagerImpl
 info.magnolia.module.ModuleRegistry=info.magnolia.module.ModuleRegistryImpl
 
-info.magnolia.cms.mail.handlers.MgnlMailHandler=info.magnolia.cms.mail.handlers.SimpleMailHandler
+info.magnolia.module.mail.handlers.MgnlMailHandler=info.magnolia.module.mail.handlers.SimpleMailHandler
 
 info.magnolia.cms.beans.config.ServerConfiguration=info.magnolia.cms.beans.config.ServerConfiguration$Observer
 info.magnolia.cms.security.SecuritySupport=/server/security
