--- a/magnolia-taglib-cms/pom.xml
+++ b/magnolia-taglib-cms/pom.xml
@@ -24,6 +24,12 @@
       <artifactId>magnolia-module-templating</artifactId>
       <version>4.0-SNAPSHOT</version>
     </dependency>
+    <!-- this dependency should be removed when templating/adminInterface are properly split -->
+    <dependency>
+      <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-module-admininterface</artifactId>
+      <version>4.0-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
