MAGNOLIA-2542 First cut. Reworked existing API. Removed duplicated methods. Removed usage of old API from other code.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21191 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -25,7 +25,8 @@ info.magnolia.commands.CommandsManager=info.magnolia.commands.CommandsManager
 info.magnolia.cms.beans.config.VersionConfig=info.magnolia.cms.beans.config.VersionConfig
 
 info.magnolia.cms.i18n.I18nContentSupport=/server/i18n/content
-info.magnolia.cms.link.LinkResolver=/server/rendering/linkResolver
+info.magnolia.cms.link.LinkUtil=/server/rendering/linkManagement
+info.magnolia.link.LinkTransformerManager=info.magnolia.link.LinkTransformerManager
 
 info.magnolia.cms.exchange.ActivationManager=/server/activation
 
