moved adminInterface properties from mgnl-beans.properties to module descriptor
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21200 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -1,6 +1,6 @@
 #--------------------------------------------
-# Here we define some implementation classes.
-# In future versions we will use Spring.
+# Default implementations or locations for core beans.
+# Modules define their own in their module descriptors.
 #--------------------------------------------
 info.magnolia.context.WebContext=info.magnolia.context.WebContextImpl
 info.magnolia.context.SystemContext=info.magnolia.context.JCRSessionPerThreadSystemContext
@@ -37,13 +37,6 @@ info.magnolia.cms.gui.dialog.ControlsManager=info.magnolia.cms.gui.dialog.Contro
 
 info.magnolia.freemarker.MagnoliaObjectWrapper=info.magnolia.freemarker.MagnoliaObjectWrapper
 info.magnolia.freemarker.FreemarkerTemplateLoaderManager=/server/freemarker
-
-info.magnolia.module.admininterface.DialogHandlerManager=info.magnolia.module.admininterface.DialogHandlerManager
-info.magnolia.module.admininterface.ParagraphDialogHandlerManager=info.magnolia.module.admininterface.ParagraphDialogHandlerManager
-info.magnolia.module.admininterface.PageHandlerManager=info.magnolia.module.admininterface.PageHandlerManager
-
-info.magnolia.module.admininterface.TreeHandlerManager=info.magnolia.module.admininterface.TreeHandlerManager
-info.magnolia.module.admininterface.SaveHandler=info.magnolia.module.admininterface.UUIDSaveHandler
 
 info.magnolia.voting.Voting = info.magnolia.voting.DefaultVoting
 info.magnolia.voting.Voter = info.magnolia.voting.voters.VoterSet
