moved model and loader classes to subpackages
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21242 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -35,7 +35,7 @@ info.magnolia.content2bean.TypeMapping=info.magnolia.content2bean.impl.Propertie
 
 info.magnolia.cms.gui.dialog.ControlsManager=info.magnolia.cms.gui.dialog.ControlsManager
 
-info.magnolia.freemarker.MagnoliaObjectWrapper=info.magnolia.freemarker.MagnoliaObjectWrapper
+info.magnolia.freemarker.models.MagnoliaObjectWrapper=info.magnolia.freemarker.models.MagnoliaObjectWrapper
 info.magnolia.freemarker.FreemarkerTemplateLoaderManager=/server/freemarker
 
 info.magnolia.voting.Voting = info.magnolia.voting.DefaultVoting
