MAGNOLIA-1111 don't let xerces be brought in by jackrabbit(nekohtml transitively) - but we still use it explicity in magnolia-core
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@21517 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,11 @@ for Java Content Repositories (JCR).
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
           </exclusion>
+          <!-- maybe this will have to be un-excluded if remove out explicit usage of it in magnolia-core --> 
+          <exclusion>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
@@ -442,6 +447,10 @@ for Java Content Repositories (JCR).
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
@@ -461,6 +470,10 @@ for Java Content Repositories (JCR).
           <exclusion>
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
