--- a/magnolia-module-workflow/pom.xml
+++ b/magnolia-module-workflow/pom.xml
@@ -10,7 +10,7 @@
   <name>magnolia-module-workflow</name>
   <description />
   <properties>
-    <documentationURL>http://documentation.magnolia.info/modules/workflow.html</documentationURL>
+    <documentationURL>http://documentation.magnolia-cms.com/modules/workflow.html</documentationURL>
     <openwfe.version>1.7.2.1</openwfe.version>
   </properties>
   <dependencies>
