leftovers from MAGNOLIA-2532: updating the log4j dependency to 1.2.15 requires adding some more exclusion for transitive dependencies
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@22153 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>info.magnolia</groupId>
@@ -10,17 +11,14 @@
   <packaging>pom</packaging>
   <name>magnolia-project</name>
   <version>4.0-SNAPSHOT</version>
-  <description>
-Magnolia is an open-source enterprise class
-Content Management System developed by
-Magnolia International, based on the standard API
-for Java Content Repositories (JCR).
-  </description>
+  <description> Magnolia is an open-source enterprise class Content Management System developed by Magnolia
+    International, based on the standard API for Java Content Repositories (JCR).</description>
   <url>http://www.magnolia-cms.com</url>
   <properties>
     <magnoliaEdition>Community Edition</magnoliaEdition>
     <magnoliaLicenseStyle>dual</magnoliaLicenseStyle>
-    <documentationURL>http://documentation.magnolia-cms.com/release/4-0.html</documentationURL>
+    <documentationURL>http://documentation.magnolia-cms.com/release/4-0.html
+    </documentationURL>
   </properties>
   <issueManagement>
     <system>Jira</system>
@@ -125,9 +123,12 @@ for Java Content Repositories (JCR).
     </contributor>
   </contributors>
   <scm>
-    <connection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk</connection>
-    <developerConnection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk</developerConnection>
-    <url>http://svn.magnolia-cms.com/view/community/magnolia/trunk</url>
+    <connection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk
+    </connection>
+    <developerConnection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk
+    </developerConnection>
+    <url>http://svn.magnolia-cms.com/view/community/magnolia/trunk
+    </url>
   </scm>
   <profiles>
     <profile>
@@ -172,8 +173,10 @@ for Java Content Repositories (JCR).
         </configuration>
       </plugin>
       <plugin>
-        <!-- We don't want the release plugin to generate a site for this big project,
-             we'll generate it manually as a separate process -->
+        <!--
+          We don't want the release plugin to generate a site for this big project, we'll generate it manually as a
+          separate process
+        -->
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
           <goals>deploy</goals>
@@ -192,7 +195,7 @@ for Java Content Repositories (JCR).
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
           </exclusion>
-          <!-- maybe this will have to be un-excluded if remove out explicit usage of it in magnolia-core --> 
+          <!-- maybe this will have to be un-excluded if remove out explicit usage of it in magnolia-core -->
           <exclusion>
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
@@ -348,7 +351,7 @@ for Java Content Repositories (JCR).
       <dependency>
         <groupId>net.sourceforge.openutils</groupId>
         <artifactId>openutils-log4j</artifactId>
-        <version>1.0.1</version>
+        <version>2.0.3</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
@@ -359,18 +362,6 @@ for Java Content Repositories (JCR).
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
         <version>1.5.6</version>
-      </dependency>
-      <!-- required by commons-httpclient, commons-betwixt, commons-discovery, commons-chain in replacement of commons-logging-->
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>jcl-over-slf4j</artifactId>
-        <version>1.5.6</version>
-      </dependency>
-      <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>1.2.15</version>
-        <!-- 1.2.15 being log4j's first maven-based release, they have a bunch of things to learn, i.e that most of their dependencies should be flagged as optional -->
         <exclusions>
           <exclusion>
             <groupId>javax.mail</groupId>
@@ -380,11 +371,47 @@ for Java Content Repositories (JCR).
             <groupId>javax.jms</groupId>
             <artifactId>jms</artifactId>
           </exclusion>
-         <exclusion>
+          <exclusion>
             <groupId>com.sun.jdmk</groupId>
             <artifactId>jmxtools</artifactId>
           </exclusion>
-         <exclusion>
+          <exclusion>
+            <groupId>com.sun.jmx</groupId>
+            <artifactId>jmxri</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <!--
+        required by commons-httpclient, commons-betwixt, commons-discovery, commons-chain in replacement of
+        commons-logging
+      -->
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>1.5.6</version>
+      </dependency>
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.15</version>
+        <!--
+          1.2.15 being log4j's first maven-based release, they have a bunch of things to learn, i.e that most of their
+          dependencies should be flagged as optional
+        -->
+        <exclusions>
+          <exclusion>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>javax.jms</groupId>
+            <artifactId>jms</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>com.sun.jdmk</groupId>
+            <artifactId>jmxtools</artifactId>
+          </exclusion>
+          <exclusion>
             <groupId>com.sun.jmx</groupId>
             <artifactId>jmxri</artifactId>
           </exclusion>
@@ -475,6 +502,11 @@ for Java Content Repositories (JCR).
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
           </exclusion>
+          <!-- avoid log4j 1.2.15 unwanted dependencies -->
+          <exclusion>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
@@ -517,7 +549,8 @@ for Java Content Repositories (JCR).
     <site>
       <id>dev.magnolia-cms.com</id>
       <name>dev.magnolia-cms.com</name>
-      <url>scp://dev.magnolia-cms.com/sites/dev/ref/${project.version}</url>
+      <url>scp://dev.magnolia-cms.com/sites/dev/ref/${project.version}
+      </url>
     </site>
     <downloadUrl>http://prdownloads.sourceforge.net/magnolia</downloadUrl>
   </distributionManagement>
