--- a/magnolia-jaas/pom.xml
+++ b/magnolia-jaas/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>4.0-SNAPSHOT</version>
+    <version>4.0-rc3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.0-SNAPSHOT</version>
+      <version>4.0-rc3</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
