--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>info.magnolia</groupId>
@@ -10,7 +9,7 @@
   <artifactId>magnolia-project</artifactId>
   <packaging>pom</packaging>
   <name>magnolia-project</name>
-  <version>4.0-SNAPSHOT</version>
+  <version>4.0-rc3</version>
   <description> Magnolia is an open-source enterprise class Content Management System developed by Magnolia
     International, based on the standard API for Java Content Repositories (JCR).</description>
   <url>http://www.magnolia-cms.com</url>
@@ -123,12 +122,9 @@
     </contributor>
   </contributors>
   <scm>
-    <connection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk
-    </connection>
-    <developerConnection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk
-    </developerConnection>
-    <url>http://svn.magnolia-cms.com/view/community/magnolia/trunk
-    </url>
+    <connection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/tags/magnolia-4.0-rc3</connection>
+    <developerConnection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/tags/magnolia-4.0-rc3</developerConnection>
+    <url>http://svn.magnolia-cms.com/view/community/magnolia/tags/magnolia-4.0-rc3</url>
   </scm>
   <profiles>
     <profile>
