MAGNOLIA-2621 can't extend / replace MessagesManager becauseof it's final
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@22513 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -41,3 +41,4 @@ info.magnolia.voting.Voting = info.magnolia.voting.DefaultVoting
 info.magnolia.voting.Voter = info.magnolia.voting.voters.VoterSet
 info.magnolia.logging.AuditLoggingManager=/server/auditLogging
 info.magnolia.module.form.processing.FormProcessing=info.magnolia.module.form.processing.DefaultProcessing
+info.magnolia.cms.i18n.MessagesManager=info.magnolia.cms.i18n.DefaultMessagesManager
