typos in comment
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@22860 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -188,7 +188,7 @@
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
           </exclusion>
-          <!-- maybe this will have to be un-excluded if remove out explicit usage of it in magnolia-core -->
+          <!-- maybe this will have to be un-excluded if we remove our explicit usage of it in magnolia-core -->
           <exclusion>
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
