--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -18,17 +18,17 @@
         <dependency>
           <groupId>info.magnolia</groupId>
           <artifactId>magnolia-module-workflow</artifactId>
-          <version>4.0-SNAPSHOT</version>
+          <version>4.0</version>
         </dependency>
         <dependency>
           <groupId>info.magnolia</groupId>
           <artifactId>magnolia-module-dms</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.3</version>
         </dependency>
         <dependency>
           <groupId>info.magnolia</groupId>
           <artifactId>magnolia-module-samples</artifactId>
-          <version>4.0-SNAPSHOT</version>
+          <version>4.0</version>
         </dependency>
       </dependencies>
     </profile>
