[maven-release-plugin] prepare branch magnolia-4.0
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@23834 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -114,9 +114,9 @@ for Java Content Repositories (JCR).
     </contributor>
   </contributors>
   <scm>
-    <connection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk</connection>
-    <developerConnection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk</developerConnection>
-    <url>http://svn.magnolia-cms.com/view/community/magnolia/trunk</url>
+    <connection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/branches/magnolia-4.0</connection>
+    <developerConnection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/branches/magnolia-4.0</developerConnection>
+    <url>http://svn.magnolia-cms.com/view/community/magnolia/branches/magnolia-4.0</url>
   </scm>
   <profiles>
     <profile>
